[package]
name = "light-ini"
version = "0.1.0"
authors = ["Laurent Pelecq <lpelecq+rust@circoise.eu>"]
description = "Event-driven parser for the INI file format"
readme = "README.md"
homepage = "https://github.com/lparcq/light-ini"
license = "MIT"
categories = ["config", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "5"
