[package]
name = "light-ini"
version = "0.2.0"
authors = ["Laurent Pelecq <lpelecq+rust@circoise.eu>"]
description = "Event-driven parser for the INI file format"
readme = "README.md"
homepage = "https://github.com/lparcq/light-ini"
documentation = "https://docs.rs/light-ini"
license = "MIT"
categories = ["config", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "7"
